the_project/kustomize/overlays/production/broadcaster-forward.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  template:
    spec:
      containers:
        - name: broadcaster
