the_project/kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
spec:
  ingressClassName: traefik
  rules:
    - host: production.todo.localhost
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app
                port:
                  number: 80
